adding fake data to component template

--- a/src/app/characters-page/characters-page.component.html
+++ b/src/app/characters-page/characters-page.component.html
@@ -1,1 +1,4 @@
-<p>characters-page works!</p>
+<p>characters-page works with results!</p>
+<div *ngFor="let result of results">
+  <h3>Name:{{result.name}}</h3>
+</div>
